--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,6 @@
   <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
 </head>
 <body>
-  <app-root></app-root>
+  <swapi-root></swapi-root>
 </body>
 </html>
